# AdventOfCode2019

./: .gitignore  Cargo.toml
.cargo/: config
host/: Cargo.toml
host/src/: main.rs
mcu/: Cargo.toml
mcu/src/: challenges.rs  input.rs  main.rs  rtc.rs
mcu/src/challenges/: day1.rs  day2.rs  day3.rs  day4.rs  intcode.rs
shared/: Cargo.toml
shared/src/: compress.rs  decompress.rs  input.rs  lib.rs
src/: main.rs  rtc.rs
