[package]
name = "aoc19_mcu"
version = "0.1.0"
authors = ["Stuart Haidon <serayen.sh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.13"
panic-semihosting = "0.5.6"
ssd1306 = { git = "https://github.com/Measter/ssd1306.git" }
stm32f3-discovery = "0.5.0"
tinyvec = { version = "1.1.1", features = ["rustc_1_40", "nightly_const_generics"] }
numtoa = "0.2.3"

[dependencies.shared]
path = "../shared"
